index and style got chamged

--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,20 @@
     align-items: center;
 }
 .container{
-    margin-left: 72.5px;
-     height: 70%;
-     width: 40%;
+    /* margin-left: 72.5px; */
+     height: 60vh;
+     width: 30vw;
+     /* border: 1px solid black; */
+     background-color:#8a817c;
+     display: flex;
+     /* flex-direction: column; */
+     flex-wrap: wrap;
+     overflow: hidden;
+     align-items: center;
+     justify-content: center;
      /* border: 1px solid black; */
 }
+
 h1{
    
     margin-bottom: 40px;
@@ -29,15 +38,11 @@ h1{
     align-items: center;
     justify-content: center;
 } */
-button{
-    /* margin: 5px; */
-    border: 1.5px solid black;
-    border-radius: 3px;
-    padding: 2px;
-}
 .box{
-    height: 4.4rem;
-    width: 4.6rem;
+    /* height: 15vh;
+    width: 15vw; */
+    height: 7.3rem;
+    width: 8rem;
     border-radius: 8px;
     margin: 2px;
     gap: 1rem;
@@ -66,4 +71,11 @@ button{
 }
 .hide{
     display: none;
+}
+#res{
+    margin-top: 30px;
+    border: 1.5px solid black;
+    border-radius: 3px;
+    padding: 2px;
+
 }
